respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Associated_Document__c.object
<CustomObject>
    <description>Import space for documents created and associated to an Account, Import-Export and/or shipment.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associate_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Air_Waybill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Air_Waybill</label>
        <referenceTo>Air_Waybill__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_for_Community__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consolidation_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipments Program</label>
        <referenceTo>Shipment_Program__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Description__c</fullName>
        <label>Document Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Reference__c</fullName>
        <label>Document Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acuse</fullName>
                </value>
                <value>
                    <fullName>Bill of Lading</fullName>
                </value>
                <value>
                    <fullName>Guía Consolidado</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Import Permit</fullName>
                </value>
                <value>
                    <fullName>Customer Order</fullName>
                </value>
                <value>
                    <fullName>Order Confirmation</fullName>
                </value>
                <value>
                    <fullName>Technical Specifications</fullName>
                </value>
                <value>
                    <fullName>Proforma Invoice</fullName>
                </value>
                <value>
                    <fullName>Commercial Invoice</fullName>
                </value>
                <value>
                    <fullName>Packaging List</fullName>
                </value>
                <value>
                    <fullName>Shipping Line Instruction</fullName>
                </value>
                <value>
                    <fullName>Transport Delivery Instruction</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Telex</fullName>
                </value>
                <value>
                    <fullName>Op - Licencia</fullName>
                </value>
                <value>
                    <fullName>Op - Tarjeta Circulacion</fullName>
                </value>
                <value>
                    <fullName>Op - Placas Unidad</fullName>
                </value>
                <value>
                    <fullName>Formato de Alta de Proveedor Firmado</fullName>
                </value>
                <value>
                    <fullName>Comprobante de Domicilio</fullName>
                </value>
                <value>
                    <fullName>IFE del Represéntate Legal</fullName>
                </value>
                <value>
                    <fullName>Poliza Vigente y del Prestador</fullName>
                </value>
                <value>
                    <fullName>Opinion de Cumplimiento Ante el SAT</fullName>
                </value>
                <value>
                    <fullName>Convenio</fullName>
                </value>
                <value>
                    <fullName>Alta del SAT</fullName>
                </value>
                <value>
                    <fullName>Factura Timbrada</fullName>
                </value>
                <value>
                    <fullName>Perfil de Conductores</fullName>
                </value>
                <value>
                    <fullName>Negociación de tarifas</fullName>
                </value>
                <value>
                    <fullName>MC Number</fullName>
                </value>
                <value>
                    <fullName>Ejemplo de Acuse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_URL__c</fullName>
        <label>Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <formula>IF( Document_URL__c !=null,HYPERLINK(  MID($Api.Enterprise_Server_URL_300, FIND(&apos;/&apos;,$Api.Enterprise_Server_URL_300,9),FIND( &apos;/services&apos;, $Api.Enterprise_Server_URL_300)- FIND(&apos;/&apos;,$Api.Enterprise_Server_URL_300,9))+Document_URL__c  , IMAGE(&apos;/img/icon/contracts32.png&apos;,&apos;Document&apos;,32,32),&apos;_blank&apos;),IF(  Manual_Document_URL__c !=null,HYPERLINK(   Manual_Document_URL__c , IMAGE(&apos;/img/icon/contracts32.png&apos;,&apos;Document&apos;,32,32),&apos;_blank&apos;),null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Content_Version_Id__c</fullName>
        <label>File Content Version Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Export_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import-Export Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer_Quote__c.Account_for__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associate_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Invoice__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPI_POD__c</fullName>
        <formula>CreatedDate -  Unload_Time_Shipment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI POD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual_Document_URL__c</fullName>
        <label>Manual Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Operadores__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operadores</label>
        <referenceTo>Operadores__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operations_Executive__c</fullName>
        <formula>Shipment__r.Operation_Executive__r.FirstName &amp; &quot; &quot;&amp; Shipment__r.Operation_Executive__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operations Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rti_Factura_Proveedor__c</fullName>
        <formula>IF( ISPICKVAL(Document_Type__c,&quot;Business Specifications&quot;),True, False)</formula>
        <label>Factura Proveedor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SCM Contract</label>
        <referenceTo>SCM_Contract__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_Service__c</fullName>
        <formula>Shipment__r.ShipmentService__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SP Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Carrier__c</fullName>
        <formula>Shipment__r.Carrier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Carrier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Consolidation_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Consolidation Data</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shipment_Consolidation_Data__c.Shipment__c</field>
                <operation>equals</operation>
                <valueField>$Source.Shipment__c</valueField>
            </filterItems>
            <filterItems>
                <field>Shipment_Consolidation_Data__c.Import_Export_Quote__c</field>
                <operation>equals</operation>
                <valueField>$Source.Import_Export_Quote__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Shipment_Consolidation_Data__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Disbursement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Disbursement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Shipment__c</field>
                <operation>equals</operation>
                <valueField>Shipment_Disbursement__c.Shipment__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Shipment_Disbursement__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Packaging_Consolidation_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transport Packaging Data</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Transport_Packaging_Data__c.Shipment__c</field>
                <operation>equals</operation>
                <valueField>$Source.Shipment__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Transport_Packaging_Data__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment FTL Track</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Shipment_Track__c.Shipment__r.Account_for__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Shipment_Track__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shipment__c.Account_for__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shopping_Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shopping_Cart__c.Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Shopping_Cart__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associate_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Quote/Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier_Quote__c.Supply_Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Supply_Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Supplier_Quote__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Request_RFP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Request (RFP)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier_Request_RFP__c.Supply_Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Supply_Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Supplier_Request_RFP__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supply_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supply Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supply_Project__c.Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Supply_Project__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associate_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tipo_Venta__c</fullName>
        <formula>TEXT(Account__r.Venta_Sap__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo Venta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truckstop_Document_Id__c</fullName>
        <label>Truckstop Document Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unload_Time_Shipment__c</fullName>
        <formula>Shipment__r.Equip_Unloaded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unload Time (Shipment)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse_Exit_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse Exit Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Warehouse_Exit_Order__c.Account_for_Customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Warehouse_Exit_Order__c</referenceTo>
        <relationshipLabel>Associated Documents</relationshipLabel>
        <relationshipName>Associated_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Associated Document</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Document__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Shipment__c</columns>
        <columns>Import_Export_Quote__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Associated Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Associated Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>